--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+input, button {
+  padding: .7rem;
+  outline: none;
+  border: none;
+}
+
+* {
+  border-radius: .5rem;
+}
+
+button:hover {
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0px 2px 5px 1px rgb(255, 0, 0);
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  gap: 1rem;
+
+  padding: 3rem 7rem;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: bolder;
+}
+
+svg {
+  color: white;
 }
